# py_odrive

./: .gitignore  README.md  __init__.py  encode.py  main.py  motor_start.py  package.xml  setup.cfg  setup.py
config/: config.yaml  odrive-cansimple.dbc
examples/: motor_start.py
lib/can_interface/: can_interface.py
lib/odrive_wrapper/: cansimple_wrapper.py
py_odrive/: main.py
py_odrive/lib/: __init__.py  can_interface.py  cansimple_wrapper.py  odrive_wrapper.py  utils.py
py_odrive/lib/can_interface/: can_interface.py
test/: __init__.py  test_can_interface.py  test_cansimple_wrapper.py  test_dbc.py  test_odrive_decode.py  test_odrive_encode.py  test_utils.py
test/test_asset/: invalid_config.yaml  nested_invalid_config.yaml  valid_config.yaml
